db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  ports:
    - port: 5432
  selector:
    app: db
