service.yaml
apiVersion: v1
kind: Service
metadata:
  name: projet-service-cloud-service
spec:
  type: LoadBalancer
  ports:
    - port: 5432
      targetPort: 5433
  selector:
    app: projet-service-cloud
